# novelAI

./: .gitignore  README.md  pyproject.toml
config/: loader.py  log.py
config/data/: base.yaml
config/promot/: 设计.txt
llm/: baidu_client.py  qwen_client.py
novel_gen/: __init__.py  chat.py  naming.py
storage/: oss_storage.py  sync_config.py
web/: app.py
web/static/: app.js  style.css
web/templates/: index.html  novel.html
