[tool.poetry]
name = "novelai"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.0.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

